# aiohttp-pydantic

./: .drone.jsonnet  .drone.yml  .gitignore  .travis.yml  README.rst  poc_mqtt.py  pyproject.toml  setup.cfg  setup.py  tasks.py  test_requirements.txt
.github/workflows/: install-package-and-test.yml
aiohttp_pydantic/: __init__.py  compat.py  decorator.py  injectors.py  security.py  uploaded_file.py  utils.py  view.py  wsapp.py
aiohttp_pydantic/aas/: __init__.py  index.j2  struct.py  view.py
aiohttp_pydantic/mq_backend/: abstract.py  memory.py
aiohttp_pydantic/oas/: __init__.py  cmd.py  definition.py  docstring_parser.py  index.j2  pydantic_schema_to_oas.py  struct.py  typing.py  view.py
aiohttp_pydantic/security/: injectors.py  mixins.py  security.py
aiohttp_pydantic/ws_subprotocol/: abstract.py  mqtt.py
demo/: __main__.py  customize_oas.py  main.py  model.py  poc_mqtt_index.html  security.py  view.py
requirements/: ci.txt  test.txt
tests/: test_group.py  test_hook_to_custom_response.py  test_inheritance.py  test_mqtt_wsview.py  test_parse_func_signature.py  test_security.py  test_validation_body.py  test_validation_header.py  test_validation_multipart_body.py  test_validation_path.py  test_validation_query_string.py
tests/test_oas/: test_docstring_parser.py  test_hook_to_customization.py  test_view.py  test_view_with_links.py
tests/test_oas/bench/: decorated_handler.py  decorated_handler_with_request.py  model.py  pydantic_view.py  view.py
tests/test_oas/test_cmd/: oas_base.json  sample.py  test_cmd.py
tests/test_oas/test_struct/: test_info.py  test_paths.py  test_servers.py
