[metadata]
name = aiohttp_pydantic
version = attr: aiohttp_pydantic.__version__
url = https://github.com/Maillol/aiohttp-pydantic
author = Vincent Maillol
author_email = vincent.maillol@gmail.com
description = Aiohttp View using pydantic to validate request body and query sting regarding method annotations.
long_description = file: README.rst
keywords =
    aiohttp
    pydantic
    annotations
    validation
license = MIT
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Application Frameworks
    Framework :: AsyncIO
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    aiohttp
    pydantic>=1.7
    swagger-ui-bundle

[options.extras_require]
test = pytest==6.1.2; pytest-aiohttp==0.3.0; pytest-cov==2.10.1
ci = pytest==6.1.2; pytest-aiohttp==0.3.0; pytest-cov==2.10.1; codecov==2.1.11; readme-renderer==29.0

[options.packages.find]
exclude =
    tests
    demo

[options.package_data]
aiohttp_pydantic.oas = index.j2
