[metadata]
name = aiohttp_pydantic
version = attr: aiohttp_pydantic.__version__
url = https://github.com/Maillol/aiohttp-pydantic
author = Vincent Maillol
author_email = vincent.maillol@gmail.com
description = Aiohttp View using pydantic to validate request body and query sting regarding method annotations.
long_description = file: README.rst
keywords =
    aiohttp
    pydantic
    annotations
    validation
license = MIT
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Application Frameworks
    Framework :: aiohttp

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    aiohttp
    packaging
    pydantic>=2.0,<3.0
    swagger-ui-bundle
    typing-extensions

[options.extras_require]
test =
    pytest==7.2.0
    pytest-aiohttp==1.0.5
    pytest-cov==4.0.0
    readme-renderer==37.3
    build>=1.0.3
ci =
    %(test)s
    codecov==2.1.13
    twine>=4.0.0,<5

[options.packages.find]
exclude =
    tests*
    demo*

[options.package_data]
aiohttp_pydantic.oas = index.j2
